incorporate tag changes

--- a/manuscript/bib.bib
+++ b/manuscript/bib.bib
@@ -1507,15 +1507,6 @@
   note = {R package version 3.4-0},
   url = {https://CRAN.R-project.org/package=survival},
 }
-@Manual{rfsrc-paclage,
-  title = {Fast Unified Random Forests for Survival, Regression, and Classification (RF-SRC)},
-  author = {H. Ishwaran and U.B. Kogalur},
-  publisher = {manual},
-  year = 2023,
-  note = {R package version 3.2.2},
-  url = {https://cran.r-project.org/package=randomForestSRC},
-  pdf = {https://cran.r-project.org/web/packages/randomForestSRC/randomForestSRC.pdf},
-}
 @Article{glmnet-glm,
   title = {Regularization Paths for Generalized Linear Models via Coordinate Descent},
   author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
@@ -1633,4 +1624,13 @@
   school       = {University of Copenhagen},
   type         = {PhD thesis},
   url={https://publichealth.ku.dk/about-the-department/biostat/phd-theses/2023_munch.pdf}
+}
+@Manual{randomForestSRC,
+    title = {Fast Unified Random Forests for Survival, Regression, and Classification (RF-SRC)},
+    author = {H. Ishwaran and U.B. Kogalur},
+    publisher = {manual},
+    year = {2025},
+    note = {R package version 3.3.3},
+    url = {https://cran.r-project.org/package=randomForestSRC},
+    pdf = {https://cran.r-project.org/web/packages/randomForestSRC/randomForestSRC.pdf}
 }
